[gd_scene load_steps=9 format=2]

[ext_resource path="res://BlockSystems/FuelPorts/FuelPortManager.tscn" type="PackedScene" id=1]
[ext_resource path="res://Blocks/IOPortBlocks/PortBlockBase.tscn" type="PackedScene" id=2]
[ext_resource path="res://Blocks/FuelTestBlock.gd" type="Script" id=3]
[ext_resource path="res://BlockSystems/FuelPorts/FuelTank.tscn" type="PackedScene" id=4]
[ext_resource path="res://BlockSystems/FuelPorts/FuelPort.tscn" type="PackedScene" id=5]
[ext_resource path="res://BlockSystems/FuelPorts/FuelTankGauge.tscn" type="PackedScene" id=6]
[ext_resource path="res://BlockSystems/FuelPorts/FuelTankManager.tscn" type="PackedScene" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 96, 96 )

[node name="FuelTestBlock" instance=ExtResource( 2 )]
script = ExtResource( 3 )
size_grid = [ Vector2( -1, -1 ), Vector2( 0, -1 ), Vector2( 1, -1 ), Vector2( -1, 0 ), Vector2( 0, 0 ), Vector2( 1, 0 ), Vector2( -1, 1 ), Vector2( 0, 1 ), Vector2( 1, 1 ) ]
class_type = "FuelTestBlock"
hitbox_colliders = [ NodePath("CollisionShape2D") ]

[node name="Sprite" parent="." index="0"]
scale = Vector2( 3, 3 )

[node name="BlockSystems" parent="." index="3"]
block_path = NodePath("..")

[node name="FuelPortManager" parent="BlockSystems" index="1" instance=ExtResource( 1 )]

[node name="FuelPort" parent="BlockSystems/FuelPortManager" index="0" instance=ExtResource( 5 )]
position = Vector2( 0, -23.6089 )
port_id = "FuelPort1"
is_input = true
is_output = true
fuel_tank_path = NodePath("../../FuelTankManager/FuelTank")

[node name="FuelTankManager" parent="BlockSystems" index="2" instance=ExtResource( 7 )]
element_paths = [ NodePath("FuelTank") ]

[node name="FuelTank" parent="BlockSystems/FuelTankManager" index="0" instance=ExtResource( 4 )]
volume = 100.0
max_pressure = 1.0

[node name="FuelTankGauge" parent="BlockSystems/FuelTankManager/FuelTank" index="0" instance=ExtResource( 6 )]
position = Vector2( 0, 39.6451 )
fuel_tank_path = NodePath("..")

[node name="Node2D" type="Node2D" parent="." index="4"]
z_index = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Node2D" index="0"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -29.0
margin_right = 29.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="Node2D/VBoxContainer" index="0"]
margin_right = 58.0
margin_bottom = 24.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="5"]
shape = SubResource( 1 )

[node name="SizeHelper" parent="." index="6"]
tile_data = PoolIntArray( -1, 0, 0, -65536, 0, 0, -65535, 0, 0, 65535, 0, 0, 0, 0, 0, 1, 0, 0, 131071, 0, 0, 65536, 0, 0, 65537, 0, 0 )

[connection signal="text_entered" from="Node2D/VBoxContainer/LineEdit" to="." method="_on_LineEdit_text_entered"]
